html css디자인 예제

--- a/htmlsource/basic/table1.html
+++ b/htmlsource/basic/table1.html
@@ -19,6 +19,10 @@
         td(열 - column) / th(제목 컬럼) : hold, 수평 : center 정렬
      -->
     <table border="1">
+      <caption>
+        <!-- 제목 -->
+        <h3>테이블</h3>
+      </caption>
       <tr>
         <td>1행 1열</td>
         <td>1행 2열</td>
