--- a/htmlsource/basic/text.html
+++ b/htmlsource/basic/text.html
@@ -27,11 +27,9 @@
     <br />
     <strong>this text is bold</strong>
     <p>
-      <b>Lorem ipsum</b> <strong>dolor sit</strong>
-      <i><b>amet consectetur</b></i> adipisicing elit. Soluta cupiditate amet
-      rem. Eum praesentium <em>maxime cum</em> reiciendis possimus! Modi earum
-      <b>asperiores pariatur quo <del>eos dolor</del> vel quaerat </b>magni sunt
-      possimus?<br />
+      <b>Lorem ipsum</b> <strong>dolor sit</strong> <i><b>amet consectetur</b></i> adipisicing elit. Soluta cupiditate
+      amet rem. Eum praesentium <em>maxime cum</em> reiciendis possimus! Modi earum
+      <b>asperiores pariatur quo <del>eos dolor</del> vel quaerat </b>magni sunt possimus?<br />
       10<sup>2</sup> 10<sub>2</sub>
     </p>
   </body>
