--- a/htmlsource/js/dom/event/event10.html
+++ b/htmlsource/js/dom/event/event10.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
     />
     <title>Document</title>
+    <style>
+      span {
+        cursor: pointer;
+      }
+    </style>
   </head>
   <body class="bg-dark">
     <nav class="navbar navbar-light bg-light">
@@ -18,6 +23,9 @@
         <span class="badge bg-dark">Dark 🔁</span>
       </div>
     </nav>
+    <div>
+      <a href="">wdddd</a>
+    </div>
     <script>
       // badge 클릭 시 body 배경색 변경
       // const body = document.querySelector("body");
