--- a/htmlsource/js/ajax/memo.html
+++ b/htmlsource/js/ajax/memo.html
@@ -24,7 +24,7 @@
           <textarea class="form-control" id="memoText" name="memoText" rows="3"></textarea>
         </div>
         <div>
-          <button type="submit">추가</button>
+          <button type="submit" class="btn btn-primary">추가</button>
         </div>
       </form>
 
@@ -49,11 +49,13 @@
       </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <script src="./memo.js"></script>
+    <!-- <script src="./memo.js"></script> -->
+    <script src="./memo2.js"></script>
   </body>
 </html>
